<?xml version="1.0" encoding="utf-8"?>

<navigation
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/nav_graph"
  app:startDestination="@id/sign_in_fragment">

  <fragment
    android:id="@+id/sign_in_fragment"
    android:name="edu.cnm.deepdive.pippiphooray.controller.SignInFragment"
    android:label="@string/label_sign_in">
    <action
      android:id="@+id/navigate_to_batch_list_fragment"
      app:destination="@id/batch_list_fragment" />
  </fragment>

  <fragment
    android:id="@+id/batch_list_fragment"
    android:name="edu.cnm.deepdive.pippiphooray.controller.BatchListFragment"
    android:label="@string/label_batch_list">
    <action
      android:id="@+id/navigate_to_batch_detail_fragment"
      app:destination="@id/batch_detail_fragment" />
  </fragment>

  <fragment
    android:id="@+id/batch_detail_fragment"
    android:name="edu.cnm.deepdive.pippiphooray.controller.BatchDetailFragment"
    android:label="@string/label_batch_detail">
    <argument
      android:name="batchId"
      app:argType="long" />
    <action
      android:id="@+id/navigate_to_egg_detail_fragment"
      app:destination="@id/egg_detail_fragment" />
  </fragment>

  <fragment
    android:id="@+id/egg_detail_fragment"
    android:name="edu.cnm.deepdive.pippiphooray.controller.EggDetailFragment"
    android:label="@string/label_egg_detail">
    <argument
      android:name="eggId"
      app:argType="long" />
  </fragment>

  <fragment
    android:id="@+id/incubators_fragment"
    android:name="edu.cnm.deepdive.pippiphooray.controller.IncubatorsFragment"
    android:label="@string/label_incubators" >
  </fragment>

  <fragment
    android:id="@+id/settings_fragment"
    android:name="edu.cnm.deepdive.pippiphooray.controller.SettingsFragment"
    android:label="@string/label_settings" />

</navigation>
