<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:padding="24dp">

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/breed"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/breed"
      android:inputType="text" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/date_set"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/date_set"
      android:inputType="date" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/lockdown_date"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/lockdown_date"
      android:inputType="date" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/expected_hatch_date"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/expected_hatch_date"
      android:inputType="date" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/num_eggs_set"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/number_of_eggs_set"
      android:inputType="number" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/notes"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/notes"
      android:inputType="text" />

  </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
