<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:padding="24dp">

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/breed"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_incubator_name"
      android:inputType="text" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/incubator_model"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_incubator_model"
      android:inputType="text" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/target_temperature"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_target_temperature"
      android:inputType="numberDecimal" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/target_humidity"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_target_humidity"
      android:inputType="numberDecimal" />

  </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
